@@ -225,8 +225,14 @@ AC_DEFINE(PAM_KRB5_MAYBE_CONST,[const],[Define to the proper qualifier (either c
 AC_DEFINE(PASSWORD_CHANGE_PRINCIPAL,["kadmin/changepw"],[Define to the principal name of the password-changing service for any given realm.])
 
 if test x$GCC = xyes ; then
-	AC_ARG_ENABLE(extra-warnings,AC_HELP_STRING([--enable-extra-warnings],[enable additional GCC-specific warnings (default is no)]),[CFLAGS="$CFLAGS -Wall -Wextra -Wimplicit -Wunused -Wstrict-prototypes -Wmissing-prototypes -Wmissing-declarations -Wcast-align"])
-	AC_ARG_ENABLE(Werror,AC_HELP_STRING([--enable-Werror],[enable -Werror as a compile flag (default is no)]),[CFLAGS="$CFLAGS -Werror"])
+	AC_ARG_ENABLE(extra-warnings,AC_HELP_STRING([--enable-extra-warnings],[enable additional GCC-specific warnings (default is no)]),extra_warnings=$enableval,extra_warnings=no)
+	if test x$extra_warnings = xyes ; then
+		CFLAGS="$CFLAGS -Wall -Wextra -Wimplicit -Wunused -Wstrict-prototypes -Wmissing-prototypes -Wmissing-declarations -Wcast-align"
+	fi
+	AC_ARG_ENABLE(Werror,AC_HELP_STRING([--enable-Werror],[enable -Werror as a compile flag (default is no)]),enable_Werror=$enableval,enable_Werror=no)
+	if test x$enable_Werror = xyes ; then
+		CFLAGS="$CFLAGS -Werror"
+	fi
 fi
 
 AH_VERBATIM([PAM_KRB5_GNUC_PRINTF_DEFINED],
