@@ -1,3 +1,8 @@
+2005-06-20:
+	* configure.ac: fix --disable-Werror, --disable-extra-warnings so that
+	they actually work as expected.
+	* src/shmem.c, src/stash.c, src/storetmp.c: fix compile warnings.
+
 2005-06-17:
 	* src/minikafs.c,src/minikafs.h: add a variant of cell_of_file which
 	walks up the tree if it fails.
